[#199] fix : overflow : scroll -> auto 변경

--- a/src/components/modal/input/tagInput/tagInput.module.css
+++ b/src/components/modal/input/tagInput/tagInput.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  overflow: scroll;
+  overflow: auto;
   padding: 14px 16px;
   border: 1px solid var(--gray-30);
   border-radius: 6px;
